--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: #ddecfc;
+  width: 100vw;
+  height: 100vh;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.container {
+  overflow:scroll;
+overflow-x:hidden;
+  width: 400px;
+  height: 92vh;
+  background-color: white;
+  border-radius: 29px;
+  background:white;
+  box-shadow:  10px 10px 19px #d4e3f2,
+  -10px -10px 19px #e6f5ff;
+}
+
+.header {
+  height: 26%;
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 29px 29px 0px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  background-image: url('./bgc3.jpg');
+  opacity: 0.7;
+  background-size:cover;
+  background-position: center center;
+}
+
+
+.summary__todos {
+  width: 90%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.summary__todos div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.summary__todos div:not(:last-child) {
+  margin-right: 50px;
+}
+
+.summary__todos span {
+  margin-top: 5px;
+  font-size: 20px;
+}
+
+.summary__todos div span:first-child {
+  font-weight: 600;
+  font-size: 28px;
+}
+
+.today__date {
+  font-size: 32px;
+  color: white;
+}
+
+.todo__item{
+width: 340px;
+height: 60px;
+display: flex;
+align-items: center;
+padding-left: 14px;
+padding-right: 14px;
+box-sizing: border-box;
+justify-content: space-between;
+border-radius: 8px;
+margin-left: 24px;
+margin-bottom: 20px;
+font-size: 22px;
+background-color: rgba(135, 207, 235, 0.091);
+box-shadow:  8px 8px 10px #f5f5f5,
+             -8px -8px 10px #ffffff;
+
+}
+
+form {
+  height: 80px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
+.todo__field {
+  width: 70%;
+  height: 50px;
+  border: none;
+  outline: none;
+  border-radius: 34px;
+  border: rgba(100, 148, 237, 0.2) solid 1px;
+  background: #ffffff;
+  box-shadow:  5px 5px 10px #dbdbdb,
+               -5px -5px 10px #ffffff;
+}
+
+.todo__field::placeholder {
+  font-size: 16px;
+  color:rgb(191, 191, 191);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+form button {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  align-items: center;
+  outline: none;
+  padding: 16px;
+  border: rgba(100, 148, 237, 0.2) solid 1px;
+  border-radius: 50px;
+  background: #ffffff;
+  box-shadow:  5px 5px 10px #dbdbdb,
+               -5px -5px 10px #ffffff;
+  color:rgba(100, 148, 237)
+  
+}
+
+.delete__todo {
+  border: none;
+  outline: none;
+  background: none;
+  color: #bbbbbb;
+  font-size: 17px;
+}
+
+.task {
+color: rgb(111, 111, 111);
+}
+
+form input{
+  padding-left: 24px;
+  box-sizing: border-box;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color :rgb(111, 111, 111);
+  font-size: 18px;
 }
